--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -23,7 +25,10 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.4",
     "vite": "^3.2.3"
   }
 }
+
