--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "book-project-js",
+  "name": "server",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "serve-json": "json-server --watch db.json --port 4000"
+    "build": "npm run compile-typescript",
+    "compile-typescript": "tsc",
+    "devStart": "nodemon server.cjs"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "json-server": "^0.17.1",
+    "jsonfile": "^6.1.0",
+    "lowdb-adapter": "^0.1.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
+    "ts-node": "^10.9.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
@@ -27,6 +31,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4",
     "vite": "^3.2.3"
   }
