--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-modal": "^3.16.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.8.1",
+    "sass": "^1.58.3",
     "ts-node": "^10.9.1",
     "uuidv4": "^6.2.13"
   },
