--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
     "json-server": "^0.17.1",
     "jsonfile": "^6.1.0",
     "jsonwebtoken": "^9.0.0",
@@ -32,6 +33,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "ts-node": "^10.9.1",
+    "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
