--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "npm run compile-typescript",
@@ -24,6 +25,8 @@
     "jsonwebtoken": "^9.0.0",
     "lowdb-adapter": "^0.1.3",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
