--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,12 @@
   "name": "server",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "npm run compile-typescript",
     "compile-typescript": "tsc",
-    "devStart": "nodemon index.cjs",
-    "devStartAuth": "nodemon authServer.cjs",
-    "debug": "node --inspect index.cjs"
+    "devStart": "nodemon --exec ts-node index.ts",
+    "debug": "node --inspect index.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -35,18 +33,22 @@
     "react-modal": "^3.16.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
-    "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^2.2.0",
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "vite": "^3.2.3"
   }
 }
